<?xml version="1.0"?>
<package>
  <name>wtfacts</name>
  <version>0.1.11</version>
  <description>Wavelet-based Temporal series Forecasting ACTion Server package</description>
  <maintainer email="manolofc@gmail.com">Manuel Fernandez-Carmona</maintainer>
  <license>BSD</license>

  <author>Manuel Fernandez-Carmona</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend> 
  <build_depend>roslib</build_depend>
  <build_depend>python-pandas</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>python-sklearn</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>  
  <run_depend>roslib</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-pandas</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>python-sklearn</run_depend>

</package>

<!-- 
TODO: You should install these:
  pywt
-->
